2008-05-13  Matthew Barnes  <mbarnes@redhat.com>

	** Fix for bug #523023

	* storage/exchange-storage.c: (account_new_folder): Another leak fix.
	

2008-05-02  Johnny Jacob <jjohnny@novell.com>

	* NEWS, Configure.in : Evolution Exchange 2.22.1.1 release.

2008-05-02  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar):
	Set account mode to 'ONLINE_MODE' before attempting to connect.

2008-05-02  Bharath Acharya  <abharath@novell.com>

	Fixes #358706 (bnc)

	* camel/camel-exchange-store.c: 
	(update_camel_stub): Updates the camel stub value
	(exchange_connect): 
	(exchange_disconnect): Reset the stub so that reconnect happens sanely.
	* mail/mail-stub-listener.h: Store the stub value in the listener so 
	that we can use the folders_by_name (hash table) later.
	* storage/exchange-component.c: 
	(impl_setLineStatus):
	(new_connection): Update the hash table for the new stub

2008-04-07  Srinivasa Ragavan <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.22.1 release.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #303067

	* addressbook/e-book-backend-gal.c:
	Guard access to priv->ldap with its mutex.
	Also do not use local copy of priv->ldap when reconnect can change it.

2008-03-14  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #268259 (bugzilla.novell.com)

	* calendar/e-cal-backend-exchange.c: (open_calendar): Don't require
	restart of Evolution to create appointment on switching from offline
	to online mode. 

2008-03-10  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.22.0 release

2008-02-25  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.92 release.

2008-02-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #518569

	* addressbook/e-book-backend-gal.c: (member_populate):
	Properly format name and address with "<>" characters.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>
