@@ -1,3 +1,9 @@
+2008-05-20  Chenthill Palanisamy  <pchenthill@novell.com>
+	
+	Downstream fix for bug #203481 (bnc)
+	* calendar/e-cal-backend-exchange-tasks.c: (receive_task_objects): Fix the
+	conflict in local variables.									   
+
 2008-05-13  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fix for bug #523023
